[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/components/UIAxisConfig/UIAxisConfig.gd" type="Script" id=1]
[ext_resource path="res://ui/panel_style.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/FreeSans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/FreeSansBold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 10
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 10
use_filter = true
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 12
use_filter = true
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0196078, 0, 0.290196, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.501961, 0.627451, 0.74902, 1 )

[sub_resource type="DynamicFont" id=5]
size = 10
use_filter = true
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 3 )

[node name="UIAxisConfig" type="Panel"]
margin_right = 558.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 1 )

[node name="LabelTitle" type="Label" parent="."]
margin_left = 6.5
margin_top = 5.0
margin_right = 28.5
margin_bottom = 18.0
custom_colors/font_color = Color( 0.501961, 0.627451, 0.74902, 1 )
custom_fonts/font = SubResource( 1 )
text = "AXIS"

[node name="LabelBoardPin" type="Label" parent="."]
margin_left = 70.5
margin_top = 13.0
margin_right = 116.5
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Board Pin"

[node name="BtnBoardPin" type="OptionButton" parent="."]
margin_left = 70.0
margin_top = 31.0
margin_right = 132.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 3 )
text = "A0"
items = [ "A0", null, false, 0, null, "A1", null, false, 1, null, "A2", null, false, 2, null, "A3", null, false, 3, null, "A4", null, false, 4, null, "A5", null, false, 5, null ]
selected = 0

[node name="LabelAxisNum" type="Label" parent="."]
margin_left = 142.5
margin_top = 13.0
margin_right = 200.5
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Axis"

[node name="BtnAxisNum" type="OptionButton" parent="."]
margin_left = 142.0
margin_top = 31.0
margin_right = 241.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "Axis 0 (X)"
items = [ "Axis 0 (X)", null, false, 0, null, "Axis 1 (Y)", null, false, 1, null, "Axis 2 (RX)", null, false, 2, null, "Axis 3 (RY)", null, false, 3, null, "Axis 4 (Slider Right)", null, false, 4, null, "Axis 5 (Slider Left)", null, false, 5, null ]
selected = 0

[node name="LabelRemap" type="Label" parent="."]
margin_left = 262.5
margin_top = 13.0
margin_right = 395.5
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Remap potentiometer range:"

[node name="LabelValueMin" type="Label" parent="."]
margin_left = 262.5
margin_top = 37.0
margin_right = 336.5
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Value Min / Max"

[node name="BtnValueMin" type="SpinBox" parent="."]
margin_left = 350.0
margin_top = 31.0
margin_right = 440.0
margin_bottom = 55.0
max_value = 1023.0
rounded = true
align = 1

[node name="BtnValueMax" type="SpinBox" parent="."]
margin_left = 454.0
margin_top = 31.0
margin_right = 544.0
margin_bottom = 55.0
max_value = 1023.0
value = 1023.0
rounded = true
align = 1

[node name="PanelRemapPreview" type="Panel" parent="."]
margin_left = 413.0
margin_top = 11.0
margin_right = 540.0
margin_bottom = 23.0
rect_clip_content = true
custom_styles/panel = SubResource( 4 )

[node name="Bar" type="ColorRect" parent="PanelRemapPreview"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
color = Color( 0.588235, 0.372549, 0, 1 )

[node name="BtnDelete" type="Button" parent="."]
margin_left = 6.0
margin_top = 38.0
margin_right = 48.0
margin_bottom = 58.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Delete"

[connection signal="value_changed" from="BtnValueMin" to="." method="_on_BtnValueMin_value_changed"]
[connection signal="value_changed" from="BtnValueMax" to="." method="_on_BtnValueMax_value_changed"]
[connection signal="pressed" from="BtnDelete" to="." method="_on_BtnDelete_pressed"]
